Added a min-height to grid wrapper to keep footer at bottom of page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -22,6 +22,10 @@ ul {
   box-sizing: border-box;
 }
 
+.grid_wrapper {
+  min-height: 35em;
+}
+
 .headerBar{
   /*background-color: lightgrey;*/
   border: solid 2px;
