--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -11,7 +11,18 @@ ul {
   padding: 1em;
   list-style: none;
 }
-/*@FIXME: Need to add a min-height to grid component to keep footer at bottom of page*/
+
+
+
+.box_wrapper {
+  -webkit-appearance: none;
+  text-align: center;
+  font-size: 1.5em;
+  height: 2em;
+  padding-left: 0.6em;
+  width: 2em;
+}
+
 .footer_wrapper {
   background-color: black;
   color: white;
