--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -27,8 +27,10 @@ ul{
   display: inline-block;
   font-size: 3em;
   margin-top: .5em;
-  margin-left: 2em;
-  text-align: center;
+  margin-left: 16%;
+  /*margin: 0 auto;*/
+  width: auto;
+  z-index: 0;
 }
 
 .headerGraphicsLeft{
@@ -45,6 +47,7 @@ ul{
   height: 6em;
   margin-right: .7em;
   width: 3.1em;
+  z-index: 1;
 }
 
 .box_wrapper {
@@ -68,4 +71,8 @@ ul{
 
 .grid_wrapper {
   min-height: 35em;
+  margin: 0 auto;
+  margin-top: 1em;
+  width: 29em;
+
 }
