Developing solving logic-3 tests needed are functional

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -68,11 +68,13 @@ ul{
   width: 100%;
 }
 
-
 .grid_wrapper {
   min-height: 35em;
   margin: 0 auto;
   margin-top: 1em;
   width: 29em;
+}
+
+.solve_button{
 
 }
