--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -40,17 +40,14 @@ td:nth-child(-3n+6){
 tr:nth-child(-3n+6){
   border-bottom: solid 6px black;
 }
-.boxArea{
-  border-bottom: solid 4px blue;
-}
 
-.headerBar{
+.header_Bar{
   border: solid 2px;
   height: 6.5em;
   margin-top: 0;
 }
 
-.mainTitle{
+.main_Title{
   display: inline-block;
   font-size: 3em;
   margin-top: .5em;
@@ -60,7 +57,7 @@ tr:nth-child(-3n+6){
   z-index: 0;
 }
 
-.headerGraphicsLeft{
+.header_GraphicsLeft{
   display: block;
   float: left;
   height: 1em;
@@ -68,7 +65,7 @@ tr:nth-child(-3n+6){
   width: 3.1em;
 }
 
-.headerGraphicsRight{
+.header_GraphicsRight{
   display: block;
   float: right;
   height: 6em;
