--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -55,6 +55,19 @@ tr:nth-child(-3n+6){
   /*margin: 0 auto;*/
   width: auto;
   z-index: 0;
+
+  text-shadow: 0 1px 0 #ccc,
+              0 2px 0 #c9c9c9,
+              0 3px 0 #bbb,
+              0 4px 0 #b9b9b9,
+              0 5px 0 #aaa,
+              0 6px 1px rgba(0,0,0,.1),
+              0 0 5px rgba(0,0,0,.1),
+              0 1px 3px rgba(0,0,0,.3),
+              0 3px 5px rgba(0,0,0,.2),
+              0 5px 10px rgba(0,0,0,.25),
+              0 10px 10px rgba(0,0,0,.2),
+              0 20px 20px rgba(0,0,0,.15);
 }
 
 .header_GraphicsLeft{
@@ -99,8 +112,11 @@ tr:nth-child(-3n+6){
   width: 100%;
 }
 
-.grid_wrapper {
+.body_area{
+  height: 28em;
+}
 
+.grid_wrapper {
   display: inline-block;
   min-height: 38em;
   margin: 0 auto;
@@ -110,7 +126,6 @@ tr:nth-child(-3n+6){
 
 .user_box{
   background-color: white;
-  /*border-top: #999999 10px solid;*/
   border-top: lightgrey 10px solid;
   border-left: #999999 10px solid;
   border-right: #222222 10px solid;
@@ -128,7 +143,6 @@ tr:nth-child(-3n+6){
 .info_text{
   font-size: 1em;
   text-indent: 1em;
-
 }
 
 .solve_button{
@@ -179,5 +193,6 @@ tr:nth-child(-3n+6){
 
 .counter_display{
   font-size: 10pt;
+  text-align: center;
   white-space: pre;
 }
