--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -17,6 +17,12 @@ input[type=number]::-webkit-outer-spin-button {
     appearance: none;
 }
 
+input[type="number"].box_wrapper::-webkit-input-placeholder {
+    background-color: white;
+    color: grey;
+    font-weight: 300;
+}
+
 ul{
   display: inline-block;
   padding: 1em;
@@ -45,8 +51,8 @@ tr:nth-child(-3n+6){
   border-bottom: solid 6px black;
 }
 
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: grey;
+.body_area{
+  height: 28em;
 }
 
 .header_Bar{
@@ -62,17 +68,17 @@ tr:nth-child(-3n+6){
   width: auto;
   z-index: 0;
   text-shadow: 0 1px 0 #ccc,
-              0 2px 0 #c9c9c9,
-              0 3px 0 #bbb,
-              0 4px 0 #b9b9b9,
-              0 5px 0 #aaa,
-              0 6px 1px rgba(0,0,0,.1),
-              0 0 5px rgba(0,0,0,.1),
-              0 1px 3px rgba(0,0,0,.3),
-              0 3px 5px rgba(0,0,0,.2),
-              0 5px 10px rgba(0,0,0,.25),
-              0 10px 10px rgba(0,0,0,.2),
-              0 20px 20px rgba(0,0,0,.15);
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
 }
 
 .header_GraphicsLeft{
@@ -91,15 +97,16 @@ tr:nth-child(-3n+6){
 }
 
 .box_wrapper {
-  -webkit-appearance: none;
-  color: blue;
-  border: solid 2px;
-  font-size: 1.5em;
-  font-weight: bold;
-  height: 2em;
+  background-color: skyblue;
+  color: black;
+  border: dimgrey solid 1px;
+  font-size: 2.5em;
+  font-weight: 700;
+  height: auto;
   margin: 0;
+  padding: 0;
   text-align: center;
-  width: 2em;
+  width: 1.4em;
 }
 
 .footer_wrapper {
@@ -108,13 +115,9 @@ tr:nth-child(-3n+6){
   width: 100%;
 }
 
-.body_area{
-  height: 28em;
-}
-
 .grid_wrapper {
   display: inline-block;
-  min-height: 38em;
+  min-height: auto;
   margin: 0 auto;
   margin-top: 1em;
   width: 29em;
@@ -192,3 +195,120 @@ tr:nth-child(-3n+6){
   text-align: center;
   white-space: pre;
 }
+
+@media screen and (max-width: 1280px) and (min-width: 1153px) {
+
+  .body_area{
+    height: 31.4em;
+  }
+
+  .header_GraphicsRight{
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 1152px) and (min-width: 519px) {
+
+  .user_box{
+    margin-left: 1em;
+    margin-top: .5em;
+    margin-right: 3em;
+  }
+
+  .body_area{
+    height: 26.5em;
+  }
+
+  .header_GraphicsRight{
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 1151px) and (min-width: 517px) {
+
+  .body_area{
+    height: 81em;
+  }
+
+  .user_box{
+    margin-left: 3em;
+    padding: .8em;
+    width: auto;
+  }
+
+  .info_text{
+    font-size: 1.8em;
+    text-indent: 1em;
+    margin: 0;
+  }
+
+  .solve_button{
+    font-size: 20pt;
+    height: 3em;
+    margin-left: 7em;
+    margin-top: 1em;
+    padding: 0;
+    width: 6em;
+  }
+
+  .reset_button{
+    font-size: 20pt;
+    height: 3em;
+    margin-left: 7em;
+    padding: 0;
+    width: 7em;
+  }
+
+  .puzzle_solved{
+    font-size: 20pt;
+    margin: 0 auto;
+    margin-top: .2em;
+    padding: .5em;
+    text-align: center;
+    width: auto;
+    vertical-align: middle;
+  }
+
+  .counter_display{
+    font-size: 20pt;
+    margin-bottom: .1em;
+    margin-top: .1em;
+  }
+
+  .grid_wrapper {
+    margin-left: 5em;
+    margin-top: 2em;
+  }
+
+  .box_wrapper {
+    font-size: 2.8em;
+  }
+
+  @media screen and (max-width: 480px) and (min-width: 100px) {
+
+    .body_area{
+      height: 100em;
+    }
+
+    .main_Title{
+      margin-left: 1em;
+      color: yellow;
+    }
+
+    .user_box{
+      background-color: yellow;
+    }
+    .solve_button{
+
+      margin-top: 3em;
+    }
+
+    .reset_button{
+
+      margin-top: 3em;
+    }
+
+    .box_wrapper {
+      font-size: 4em;
+    }
+  }
