--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -2,11 +2,12 @@
 <html>
   <head>
     <% include ../partials/header.ejs %>
+    <script src="https://use.fontawesome.com/d402f85af1.js">
+   </script>
   </head>
   <body>
     <main id="app">
     </main>
   </body>
-
   <script src="dist/bundle.js" charset="utf-8"></script>
 </html>
