--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -88,6 +88,31 @@ tr:nth-child(-3n+6){
   width: 6em;
 }
 
+.sudoku_link{
+  float: right;
+  height: 3em;
+  margin-top: .2em;
+}
+
+.sudoku_label{
+  display: inline-block;
+  font-size: .9em;
+  margin-top: 0;
+  margin-left: .5em;
+  margin-right: .5em;
+  text-decoration: underline;
+  vertical-align: middle;
+}
+
+.nav_button {
+  color: darkgrey;
+  transition: color 0.8s ease;
+}
+
+.nav_button:hover {
+  color: #FFA726;
+}
+
 .header_GraphicsRight{
   display: block;
   float: right;
@@ -95,6 +120,7 @@ tr:nth-child(-3n+6){
   width: 6em;
   z-index: 1;
 }
+
 
 .box_wrapper {
   background-color: skyblue;
@@ -115,13 +141,17 @@ tr:nth-child(-3n+6){
   width: 100%;
 }
 
-.icons{
+.our_name{
+  color: magenta;
+}
+
+.footer_and{
   display: inline-block;
   margin: 0;
   white-space: pre;
 }
 
-.copyright{
+.copyright_text{
   margin: 0;
   white-space: pre;
 }
