--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -116,11 +116,11 @@ tr:nth-child(-3n+6){
 .header_GraphicsRight{
   display: block;
   float: right;
-  margin-right: .7em;
+  /*margin-right: .7em;*/
+  margin-right: 0;
   width: 6em;
   z-index: 1;
 }
-
 
 .box_wrapper {
   background-color: skyblue;
@@ -145,7 +145,7 @@ tr:nth-child(-3n+6){
   color: magenta;
 }
 
-.footer_and{
+.footer_text{
   display: inline-block;
   margin: 0;
   white-space: pre;
@@ -325,31 +325,81 @@ tr:nth-child(-3n+6){
     font-size: 2.8em;
   }
 
-  @media screen and (max-width: 480px) and (min-width: 100px) {
+@media only screen
+and (min-device-width : 320px)
+and (max-device-width : 480px) {
 
     .body_area{
-      height: 100em;
+      height: 95em;
     }
 
     .main_Title{
-      margin-left: 1em;
-      color: yellow;
+      font-size: 3em;
+      margin-left: 2em;
+    }
+
+    .sudoku_link{
+      float: right;
+      height: 3em;
+      margin-top: .2em;
+      width: 6em;
+    }
+
+    .fa-github{
+      color: darkgrey;
+      float: right;
+      margin-right: 1em;
+      transition: color 0.8s ease;
+    }
+
+    .sudoku_label{
+      font-size: 1.5em;
+      margin-right: 1em;
+      margin-top: 0;
     }
 
     .user_box{
-      background-color: yellow;
+      font-size: 1.3em;
+      margin-top: 2em;
     }
-    .solve_button{
 
-      margin-top: 3em;
+    .solve_button{
+      margin-top: 1em;
     }
 
     .reset_button{
+      margin-top: 1em;
+    }
 
-      margin-top: 3em;
+    .grid_wrapper {
+      margin-top: .5em;
+      margin-left: .5em;
     }
 
     .box_wrapper {
-      font-size: 4em;
+      font-size: 4.8em;
+    }
+
+    .our_name{
+      color: magenta;
+      font-size: 1.8em;
+    }
+
+    .footer_text{
+      display: inline-block;
+      font-size: 1.3em;
+      margin: 0;
+      white-space: pre;
+    }
+
+    .copyright_text{
+      font-size: 1em;
+      margin: 0;
+      margin-bottom: 2em;
+      text-align: center;
+    }
+
+    .header_GraphicsRight{
+      margin-right: 0;
     }
   }
