--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -326,11 +326,88 @@ tr:nth-child(-3n+6){
   }
 
 @media only screen
+and (min-device-width : 481px)
+and (max-device-width : 800px) {
+
+  .body_area{
+    height: 95em;
+  }
+
+  .main_Title{
+    font-size: 3em;
+    margin-left: 2em;
+  }
+
+  .sudoku_link{
+    float: right;
+    height: 3em;
+    margin-top: .2em;
+    margin-right: .2em;
+    width: 6em;
+  }
+
+  .fa-github{
+    color: darkgrey;
+    float: right;
+    margin-right: 1em;
+    transition: color 0.8s ease;
+  }
+
+  .sudoku_label{
+    font-size: 1.5em;
+    margin-right: 1em;
+    margin-top: 0;
+  }
+
+  .user_box{
+    font-size: 1.3em;
+    margin-top: 2em;
+  }
+
+  .solve_button{
+    margin-top: 1em;
+  }
+
+  .reset_button{
+    margin-top: 1em;
+  }
+
+  .grid_wrapper {
+    margin-top: .5em;
+    margin-left: 0em;
+  }
+
+  .box_wrapper {
+    font-size: 4.77em;
+  }
+
+  .our_name{
+    color: magenta;
+    font-size: 1.8em;
+  }
+
+  .footer_text{
+    display: inline-block;
+    font-size: 1.3em;
+    margin: 0;
+    white-space: pre;
+  }
+
+  .copyright_text{
+    font-size: 1em;
+    margin: 0;
+    margin-bottom: 2em;
+    text-align: center;
+  }
+}
+
+@media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
 
     .body_area{
       height: 95em;
+      width: 100%;
     }
 
     .main_Title{
@@ -342,12 +419,12 @@ and (max-device-width : 480px) {
       float: right;
       height: 3em;
       margin-top: .2em;
+      margin-right: .2em;
       width: 6em;
     }
 
     .fa-github{
       color: darkgrey;
-      float: right;
       margin-right: 1em;
       transition: color 0.8s ease;
     }
@@ -377,7 +454,7 @@ and (max-device-width : 480px) {
     }
 
     .box_wrapper {
-      font-size: 4.8em;
+      font-size: 4.7em;
     }
 
     .our_name{
@@ -399,7 +476,4 @@ and (max-device-width : 480px) {
       text-align: center;
     }
 
-    .header_GraphicsRight{
-      margin-right: 0;
-    }
   }
