--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -43,24 +43,24 @@ table {
   border-spacing: 0;
 }
 
-td:nth-child(-3n+6){
+td:nth-child(-3n+6) {
   border-right: solid 6px black;
 }
 
-tr:nth-child(-3n+6){
+tr:nth-child(-3n+6) {
   border-bottom: solid 6px black;
 }
 
-.body_area{
+.body_area {
   height: 38em;
 }
 
-.header_Bar{
+.header_Bar {
   height: 6.5em;
   margin-top: 0;
 }
 
-.main_Title{
+.main_Title {
   display: inline-block;
   font-size: 3em;
   margin-top: .5em;
@@ -81,20 +81,20 @@ tr:nth-child(-3n+6){
                0 20px 20px rgba(0,0,0,.15);
 }
 
-.header_GraphicsLeft{
+.header_GraphicsLeft {
   display: block;
   float: left;
   margin: 0;
   width: 6em;
 }
 
-.sudoku_link{
+.sudoku_link {
   float: right;
   height: 3em;
   margin-top: .2em;
 }
 
-.sudoku_label{
+.sudoku_label {
   display: inline-block;
   font-size: .9em;
   margin-top: 0;
@@ -133,6 +133,32 @@ tr:nth-child(-3n+6){
   padding: 0;
   text-align: center;
   width: 1.4em;
+}
+
+.box_wrapper_load {
+  background-color: skyblue;
+  border: dimgrey solid 1px;
+  font-size: 2.5em;
+  font-weight: 700;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 1.4em;
+  color: black;
+}
+
+.box_wrapper_load::-webkit-input-placeholder {
+  background-color: skyblue;
+  border: dimgrey solid 1px;
+  font-size: 1em;
+  font-weight: 700;
+  height: auto;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  width: 1.4em;
+  color: black;
 }
 
 .footer_wrapper {
@@ -214,6 +240,20 @@ tr:nth-child(-3n+6){
   width: 5em;
 }
 
+.load_example1_button{
+  background-color: slategrey;
+  border-top: lightgrey 4px solid;
+  border-left: lightgrey 4px solid;
+  border-right: #222222 4px solid;
+  border-bottom: #222222 4px solid;
+  color: white;
+  /*font-size: 12pt;*/
+  font-weight: bolder;
+  margin-left: .5em;
+  height: 2.5em;
+  width: auto;
+}
+
 .puzzle_error{
   background-color: red;
   color: white;
@@ -240,7 +280,7 @@ tr:nth-child(-3n+6){
 @media screen and (max-width: 1280px) and (min-width: 1153px) {
 
   .body_area{
-    height: 28.5em;
+    height: 31.2em;
   }
 
   .header_GraphicsRight{
