--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,6 @@
 <meta charset="utf-8">
 <title>Sudoku Solver</title>
 <link rel="stylesheet" href="styles/main.css">
+<link rel="icon"
+      type="image/png"
+      href="/styles/favicon.png">
