--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -132,7 +132,8 @@ tr:nth-child(-3n+6) {
 }
 
 .box_wrapper {
-  background-color: skyblue;
+  -moz-appearance: textfield;
+  background-color: white;
   color: black;
   border: dimgrey solid 1px;
   font-size: 2.5em;
@@ -145,6 +146,7 @@ tr:nth-child(-3n+6) {
 }
 
 .box_wrapper_load {
+  -moz-appearance: textfield;
   background-color: skyblue;
   border: dimgrey solid 1px;
   font-size: 2.5em;
@@ -493,7 +495,7 @@ and (max-device-width : 800px) {
 @media only screen
 and (min-device-width : 320px)
 and (max-device-width : 480px) {
-  
+
   ul {
     padding: 0;
     margin-bottom: 1em;
