--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -73,7 +73,7 @@ tr:nth-child(-3n+6) {
 .main_title {
   display: inline-block;
   font-size: 3em;
-  margin-top: .5em;
+  margin-top: .2em;
   margin-left: 16%;
   width: auto;
   z-index: 0;
@@ -200,7 +200,7 @@ tr:nth-child(-3n+6) {
   display: inline-block;
   min-height: auto;
   margin: 0 auto;
-  margin-top: 1em;
+  margin-top: -.5em;
   width: 29em;
 }
 
