--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -178,7 +178,8 @@ tr:nth-child(-3n+6) {
   height: 6.1em;
   width: 100%;
   bottom: 0;
-  position: fixed;;
+  position: fixed;
+  z-index: -1;
 }
 
 .our_name {
